# tree-sitter-unison

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Cargo.toml  LICENSE  README.md  binding.gyp  grammar.js  package-lock.json  package.json  test.html  tree-sitter.json
.github/: dependabot.yml
.github/workflows/: ci.yaml  deploy.yaml  publish.yaml  regenerate-parser.yml
bindings/node/: binding.cc  index.d.ts  index.js
bindings/rust/: build.rs  lib.rs
examples/: int.u
grammar/: binding.js  blocks.js  comments.js  conditionals.js  conflicts.js  delayed-computation.js  doc.js  effect.js  expression.js  externals.js  function-application.js  handle.js  identifier.js  let.js  literal.js  misc.js  pattern-matching.js  precedences.js  record-type.js  regex.js  reserved.js  statement.js  term-.js  term.js  terms.js  type.js  types.js  use-clause.js  util.js  watch.js
grammar/docs/: index.js
script/: parse-example  tree-sitter-parse.js
src/: grammar.json  jtckdint.h  maybe.c  node-types.json  parser.c  scanner.c
test/: block.txt
test/corpus/: abilities.txt  binding.txt  blocks.txt  comment.txt  conditionals.txt  confusion.txt  delayed-computations.txt  documentation.txt  function-application.txt  handlers.txt  identifiers.txt  if-else.txt  large-tests.txt  let.txt  literals.txt  misc.txt  pattern-matching.txt  patterns.txt  regression.txt  term_declaration.txt  type-signature.txt  types.txt  use.txt
test/highlight/: fold.u  forall.u  let.u  literals.u  scratch.u
