[package]
name = "tree-sitter-unison"
description = "Unison grammar for the tree-sitter parsing library"
version = "0.0.1"
keywords = ["incremental", "parsing", "unison"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/kylegoetz/tree-sitter-unison"
edition = "2018"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20.10"

[build-dependencies]
cc = "1.0"
